<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_logo_in_gerer"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_full_lexiquiz" />

    <Button
        android:id="@+id/btn_for_create"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:background="@drawable/btn_red"
        android:onClick="lancerCrea"
        android:text="@string/click_for_create" />

    <Button
        android:id="@+id/btn_for_change"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="62dp"
        android:background="@drawable/btn_blue"
        android:onClick="lancerModif"
        android:text="@string/click_for_change" />

    <Button
        android:id="@+id/btn_for_remove"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_yellow"
        android:onClick="lancerSupp"
        android:text="@string/click_for_remove" />

</LinearLayout>